# UMF_CVPR

./: .gitignore  CITATION.cff  LICENSE  README.MD  README.md  pyproject.toml  requirements.txt  test.py  train_UMF.py  train_react.py
assets/runtime/humanml3d_meta/: Mean_ihmix266.npy  Std_ihmix266.npy
configs/: README.md  assets.yaml  base.yaml  config_pflow.yaml  config_sflow.yaml  config_vae.yaml  datasets.yaml  umf_base.yaml
configs/modules/: denoiser.yaml  evaluators.yaml  motion_vae.yaml  motion_vae_inter.yaml  react_denoiser.yaml  text_encoder.yaml  traj_encoder.yaml
data_loaders/interhuman/: eval.py  interhuman.py
data_loaders/interhuman/common/: quaternion.py
data_loaders/interhuman/configs/: datasets.yaml  infer.yaml  train.yaml
data_loaders/interhuman/datasets/: __init__.py  data_loaders.py  evaluator.py  evaluator_models.py  interhuman.py
data_loaders/interhuman/models/: __init__.py  blocks.py  layers.py  losses.py  nets.py
data_loaders/interhuman/utils/: plot_script.py  preprocess.py  renderer.py  smpl_bev.py  utils.py
data_loaders/interhuman/utils/smpl/: SMPL.py
mld/: __init__.py  config.py
mld/callback/: __init__.py  progress.py
mld/data/: __init__.py  utils.py
mld/models/: __init__.py  get_model.py
mld/models/architectures/: __init__.py  mld_clip.py  mld_denoiser.py  mld_traj_encoder.py  mld_vae.py  t2m_motionenc.py  t2m_textenc.py
mld/models/architectures/tools/: embeddings.py
mld/models/losses/: __init__.py  mld.py
mld/models/modeltype/: __init__.py  mld.py
umf/: config.py
umf/data/: HumanML3D.py  Interhuman.py  base.py  get_data.py  utils.py
umf/data/humanml/data/: dataset.py
umf/data/humanml/scripts/: motion_process.py
umf/data/humanml/utils/: get_opt.py  plot_script.py
umf/launch/: prepare.py
umf/models/: flow.py  flow_org.py  get_model.py
umf/models/architectures/: t2m_motionenc.py  t2m_textenc.py  umf_clip.py  umf_denoiser.py  umf_traj_encoder.py  umf_vae.py
umf/models/losses/: __init__.py  inter_loss.py  quaternion.py  umf.py
umf/models/metrics/: __init__.py  tm2t.py  tm2t_hm.py  utils.py
umf/models/modeltype/: base.py  umf.py
umf/models/operator/: blocks.py  cross_attention.py
umf/transforms/: base.py  feats2smpl.py  rotation2xyz.py  xyz.py
umf/transforms/joints2jfeats/: rifke.py  tools.py
umf/transforms/joints2rots/: config.py
umf/transforms/rots2joints/: smplh.py
umf/transforms/rots2rfeats/: smplvelp.py
umf/utils/: easyconvert.py  geometry.py  stage_mode.py  temos_utils.py
utils_smpl/: SMPL.py  lbs.py  motion_repre.py  plot_interhuman.py  rotation_conv.py
